src/components/Skills.module.css
.root-container {
  position: relative;
  border-top: 1.6px solid #ffffff;
  margin-top: 13.65rem;
  margin-right: 6.1rem;
  padding: 72px 0px;
}

.list-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  row-gap: 58px;
}

.list-container li {
  list-style: none;
  width: 33%;
  padding-left: 5px;
}

.list-container li h1{
  font-family: var(--space-grotesk);
  font-size: 48px;
  font-weight: 700;
  line-height: 56px;
  letter-spacing: -1.5px;
}

.list-container li p {
  font-family: var(--space-grotesk);
  font-size: 18px;
  font-weight: 500;
  line-height: 28px;
  color: #d9d9d9;
  margin-top: 0.8rem;
}

.root-container img {
  position: absolute;
  right: -25.15em;
  bottom: 0.9em;
}

